--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.6",
+    "react": "16.0.0-alpha.12",
     "react-fittext": "0.0.7",
-    "react-native": "0.43.3",
+    "react-native": "0.47.1",
     "react-native-checkbox": "^1.1.0",
     "react-native-notifications": "^1.1.10",
     "react-native-shake-event": "^3.0.0",
     "react-native-shake-event-ios": "^1.0.3",
-    "react-native-textfit": "^0.1.1"
+    "react-native-textfit": "^0.1.1",
+    "react-native-vector-icons": "^4.3.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
