--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native-shake-event": "^3.0.0",
     "react-native-shake-event-ios": "^1.0.3",
     "react-native-textfit": "^0.1.1",
-    "react-native-vector-icons": "^4.3.0"
+    "react-native-vector-icons": "^4.3.0",
+    "react-native-video": "^1.2.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
